# rya_c

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  project.yml
cmake_config/: README.cmake.md  rya.cmake.h
docs/: _r_e_a_d_m_e_8md_source.html  _r_e_a_d_m_e__doxygen_8md.html  _r_e_a_d_m_e__doxygen_8md_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  md__r_e_a_d_m_e.html  md_docs_include__r_e_a_d_m_e_doxygen.html  menudata.js  pages.html  rya_8c_source.html  rya_8cmake_8h.html  rya_8cmake_8h_source.html  rya_8h.html  rya_8h_source.html  rya__file_8c.html  rya__file_8c_source.html  rya__file_8h.html  rya__file_8h_source.html  rya__format_8c.html  rya__format_8c_source.html  rya__format_8h.html  rya__format_8h_source.html  rya__seq_8c_source.html  rya__seq_8h.html  rya__seq_8h_source.html  structrya__seq__t.html  todo.html
docs/html/: globals.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  menudata.js  rya_8h.html  rya__file_8c.html  rya__file_8c_source.html  rya__file_8h_source.html  rya__format_8c.html  rya__format_8c_source.html  rya__format_8h.html  rya__format_8h_source.html  todo.html
docs/html/search/: defines_0.js  files_0.js  functions_0.js
docs/search/: all_0.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
include/: rya.cmake.h  rya.h  rya_file.h  rya_format.h  rya_seq.h
src/: rya.c  rya.h  rya_file.c  rya_format.c  rya_seq.c
test/: test_rya.c  test_rya_file.c  test_rya_format.c  test_rya_seq.c
test_files/: small.fa
